syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sep3.grpcserver.protobuf.ratingservices";

service RatingServices {
  rpc CreateRating (RatingCreationRequest) returns (RatingResponse);
  rpc GetRatingById (RatingIdRequest) returns (RatingResponse);
  rpc GetAllRatings (GetAllRequest) returns (RatingResponseMultiple);
  rpc GetRatingsByWriterEmail (UserEmailRequest) returns (RatingResponseMultiple);
  rpc GetRatingsBySubjectEmail (UserEmailRequest) returns (RatingResponseMultiple);
  rpc DeleteRating (RatingIdRequest) returns (RatingResponse);
}

message GetAllRequest {}

message UserEmailRequest {
  string email = 1;
}

message RatingIdRequest {
  int64 id = 1;
}

message RatingCreationRequest {
  string writer_email = 1;
  string subject_email = 2;
  sint32 rating = 3;
  string rating_comment = 4;
}

message RatingResponse {
  int64 rating_id = 1;
  string writer_email = 2;
  string subject_email = 3;
  sint32 rating = 4;
  string rating_comment = 5;
}

message RatingResponseMultiple {
  repeated RatingResponse ratings = 1;
}